incluir <app-blog> en AppComponent y actualizar template de BlogComponent

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,52 +1,1 @@
-<div class="container">
-  <h2>Publicar noticia</h2>
-
-  <div *ngIf="errorMensaje" class="error">
-    {{ errorMensaje }}
-  </div>
-  <form (ngSubmit)="agregarNoticia()">
-    <label>
-      Título:
-      <input
-        type="text"
-        name="titulo"
-        [(ngModel)]="nuevaNoticia.titulo"
-      />
-    </label>
-
-    <label>
-      URL de la imagen:
-      <input
-        type="text"
-        name="imagenUrl"
-        [(ngModel)]="nuevaNoticia.imagenUrl"
-      />
-    </label>
-
-    <label>
-      Texto:
-      <textarea
-        name="texto"
-        [(ngModel)]="nuevaNoticia.texto"
-      ></textarea>
-    </label>
-
-    <label>
-      Fecha:
-      <input
-        type="date"
-        name="fecha"
-        [(ngModel)]="nuevaNoticia.fecha"
-      />
-    </label>
-
-    <button type="submit">Publicar</button>
-  </form>
-
-  <hr />
-
-
-  <h2>Listado de noticias</h2>
-  <div *ngFor="let noticia of noticias" class="noticia">
-    <h3>{{ noticia.titulo }}</h3>
-    <img
+<app-blog></app-blog>
